--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,7 +8,7 @@
     <link href="/css/style.css" rel="stylesheet">
     <link href="/images/favicon.png" rel="icon" type="image/png">
 </head>
-<body style="background-image: url(https://source.unsplash.com/RFHFV7lVQBY/1600x900);">
+<body style="background-image: url(images/jonas-jacobsson-RFHFV7lVQBY-unsplash.jpg);">
 <blockquote><strong>Debugging</strong> /de·bugh·ing/ <em>verb</em><br/>The Classic Mystery Game where you are the detective, the victim, and the murderer.
 </blockquote>
 </body>
